[gd_scene load_steps=4 format=3 uid="uid://c7562hhd8en41"]

[ext_resource type="Script" path="res://remi/lab/alexia.gd" id="1_1f227"]
[ext_resource type="Texture2D" uid="uid://2r4n7wprjape" path="res://remi/lab/assets/alexia_idle.png" id="2_b5dmk"]
[ext_resource type="Texture2D" uid="uid://bqa2dmpb8on5h" path="res://remi/lab/assets/alexia_walk_0.png" id="3_kb50f"]

[node name="Alexia" type="Node2D"]
script = ExtResource("1_1f227")

[node name="Anchor" type="Node2D" parent="."]

[node name="Sprite2DIdleNormal" type="Sprite2D" parent="Anchor"]
position = Vector2(0, -320)
texture = ExtResource("2_b5dmk")

[node name="Sprite2DWalkingNormal" type="Sprite2D" parent="Anchor"]
visible = false
position = Vector2(0, -320)
texture = ExtResource("3_kb50f")

[node name="EquipementHolder" type="Marker2D" parent="Anchor"]
position = Vector2(-14, -361)
